hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__non_native_function_have_body.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "non_native",
            IdentId(2) => "f",
            IdentId(3) => "core",
            IdentId(4) => "number",
            IdentId(5) => "add",
            IdentId(6) => "boolean",
            IdentId(7) => "div",
            IdentId(8) => "eq",
            IdentId(9) => "ge",
            IdentId(10) => "gt",
            IdentId(11) => "le",
            IdentId(12) => "lt",
            IdentId(13) => "mul",
            IdentId(14) => "neg",
            IdentId(15) => "neq",
            IdentId(16) => "sub",
            IdentId(17) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(1),
                    span: 3:10; [41, 51],
                    bound: Bound(3),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(3),
                    span: 3:30; [61, 65],
                    bound: Bound(2),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(4),
                    span: 3:35; [66, 72],
                    bound: Bound(5),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(10),
                        span: 3:44; [75, 77],
                    },
                ),
                span: 3:44; [75, 77],
                typed: Typed(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Block(
                    [
                        StmtId(2),
                    ],
                ),
                span: 3:42; [73, 80],
                typed: Typed(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        bound: Bound(1),
                    },
                    InputId(0),
                    [
                        StmtId(1),
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Annotation(
                    Identifier {
                        id: IdentId(1),
                        span: 2:20; [20, 30],
                        bound: Bound(3),
                    },
                ),
                span: 2:9; [9, 31],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Ret(
                    Some(
                        ExprId(0),
                    ),
                    Implicit,
                ),
                span: 3:44; [75, 78],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: LetFn(
                    Identifier {
                        id: IdentId(2),
                        span: 3:25; [56, 57],
                        bound: Bound(20),
                    },
                    [
                        Annotation {
                            ident_ref_ids: [
                                IdentRefId(0),
                            ],
                            span: 3:9; [40, 51],
                        },
                    ],
                    [],
                    Return {
                        type_def_id: Some(
                            TypeDefId(0),
                        ),
                        typed: Typed(4),
                    },
                    Provided(
                        ExprId(1),
                    ),
                    None,
                ),
                span: 3:21; [52, 80],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Namespace(
                    Identifier {
                        id: IdentId(3),
                        span: 5:11; [100, 104],
                        bound: Bound(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 5:17; [106, 107],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(1),
                        IdentRefId(2),
                    ],
                ),
                span: 3:30; [61, 72],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(3),
                        ],
                        IdentId(2): [
                            SymbolId(20),
                        ],
                        IdentId(3): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(3),
                    {
                        IdentId(4): [
                            SymbolId(5),
                        ],
                        IdentId(5): [
                            SymbolId(19),
                        ],
                        IdentId(6): [
                            SymbolId(6),
                        ],
                        IdentId(7): [
                            SymbolId(18),
                        ],
                        IdentId(8): [
                            SymbolId(16),
                            SymbolId(17),
                        ],
                        IdentId(9): [
                            SymbolId(15),
                        ],
                        IdentId(10): [
                            SymbolId(14),
                        ],
                        IdentId(11): [
                            SymbolId(13),
                        ],
                        IdentId(12): [
                            SymbolId(12),
                        ],
                        IdentId(13): [
                            SymbolId(11),
                        ],
                        IdentId(14): [
                            SymbolId(10),
                        ],
                        IdentId(15): [
                            SymbolId(8),
                            SymbolId(9),
                        ],
                        IdentId(16): [
                            SymbolId(7),
                        ],
                        IdentId(17): [
                            SymbolId(4),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: Annotation(
                    IdentId(1),
                    StmtId(1),
                ),
                type_id: TypeId(1),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(17),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(4),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: NativeType(
                    IdentId(6),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(15),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: LetFn(
                    IdentId(2),
                    StmtId(3),
                    [],
                    TypeId(4),
                ),
                type_id: TypeId(9),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Function(
                [],
                TypeId(4),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(1): [
                    Implicit(
                        Some(
                            ExprId(0),
                        ),
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
