hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__non_void_function_implicit_void_ret.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Function f expected to return type number, got void",
                span: 1:17; [16, 19],
                level: Error,
            },
        ],
        inputs: (),
    },
)
